Added relevant meme for ICE2

--- a/ICE-2/ICE-2/ICE-2.vcxproj.filters
+++ b/ICE-2/ICE-2/ICE-2.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Desktop\IGME 209\githubPls.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
