--- a/ICE-2/ICE-2/ICE-2.vcxproj
+++ b/ICE-2/ICE-2/ICE-2.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="ICE-2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Desktop\IGME 209\githubPls.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
