--- a/HW2/HW2/HW2.vcxproj.filters
+++ b/HW2/HW2/HW2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="HW2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="snake.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="snake.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
